# avbridge

./: CMakeLists.txt  README.md  avbridge.cbp
src/: compander.cpp  compander.hpp  converter.cpp  converter.hpp  fileio.cpp  fileio.hpp  main.cpp  windowing.cpp  windowing.hpp
src/incl/: cpp.hpp
